# Multi-Agent-Orchestrator

./: .gitignore  agent.py  multi_agent.py  pyproject.toml
services/: db_query_demo.py  g.py  git_search.py  github_search_agent_demo.py  make_pretty_output.py  mcp_git.py  orc_demo.py  tavily_search.py  web_search_agent_demo.py
services/mco/: client.py  github_search.py  mcp_server.py  tools.json
