[project]
name = "multiagentorchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "LaljiSankhat",email = "sankhatlalji0306@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "multiagentorchestrator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
